--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Bowen's random thoughts"
+author: "efzero"
+description: "We will explore interesting stuff here. Topics to be expected: thoughts on technology development and societal impacts, training for middle/long distance running, recovering from injury, classical music analysis" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
