--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Bowen's random thoughts"
 author: "efzero"
-description: "We will explore interesting stuff here. Topics to be expected: thoughts on technology development and societal impacts, training for middle/long distance running, recovering from injury, classical music analysis" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "We will explore interesting stuff here. Topics to be expected: thoughts on technology development and societal impacts, reflection on methodological approach to problem solving, training for physical fitness, recovering from injury, classical music analysis" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
