--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ description: "We will explore interesting stuff here. Topics to be expected: tho
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+# email: "tripofsea at gmail dot com"
+# twitter_username: "twitteruser"
+# github_username: "githubuser"
+# linkedin_username: "linkedinuser"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
